tests/ui/g-load-begin-wrong-control-kind.stderr
error[E0080]: evaluation panicked: wire control messages require cross-role send
 --> $RUST/core/src/panic.rs
  |
  = note: evaluation of `hibana::g::send::<0, 0, hibana::g::Msg<110, hibana::integration::cap::GenericCapToken<LoadBeginKind>>, 0>::{constant#0}` failed here
  |
 ::: src/g.rs
  |
  |                     panic!("wire control messages require cross-role send")
  |                     ------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  | /     const {
  | |         if FROM >= crate::global::ROLE_DOMAIN_SIZE as u8 {
  | |             panic!("role index must be < 16");
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<0, 0, Msg<110, GenericCapToken<LoadBeginKind>>, 0>`
  --> tests/ui/g-load-begin-wrong-control-kind.rs:18:13
   |
18 |       let _ = g::send::<
   |  _____________^
19 | |         0,
20 | |         0,
21 | |         g::Msg<{ MGMT_LOAD_BEGIN_LOGICAL }, GenericCapToken<LoadBeginKind>>,
22 | |         0,
23 | |     >();
   | |_______^
